...
            android:layout_marginTop="@dimen/margin_normal"
            android:padding="18dp"
            android:text="@{@string/detail_title(reminderDataItem.title)}"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="title" />

        <TextView
            android:id="@+id/description_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
...
